api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\dev\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\dev\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my-network: "true"
        io.kompose.service: api
    spec:
      containers:
      - env:
        - name: ConnectionStrings__shopping
          value: server=sql;database=shopping;user=sa;password=TokyoJoe138!
        - name: PickupEstimator:url
          value: https://pickup
        - name: Pricing:Markup
          value: "1.00"
        image: cmorton9249/shopping-api-nov-2020
        imagePullPolicy: ""
        name: api
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
