seq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\dev\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: seq
  name: seq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: seq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\dev\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: seq
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: Y
        image: datalust/seq:latest
        imagePullPolicy: ""
        name: seq
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
