seq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\dev\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: seq
  name: seq
spec:
  ports:
  - name: "5342"
    port: 5342
    targetPort: 80
  selector:
    io.kompose.service: seq
status:
  loadBalancer: {}
