my-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: my-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/my-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/my-network: "true"
